Completed Plan Type bar chart, sum types and sorted

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 <body>
     <div class="header" id="bodyheader">
-        <h1 id="title">My Website</h1>
-        <p id="comment">Resize the browser window to see the effect.</p>
+        <h1 id="title">AGB Dashboard</h1>
+        <p id="comment">Always giving back</p>
     </div>
     </div>
 
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="row">
-            <div id="monthly"></div>
+            <div id="enrollment"></div>
         </div>
 
     </div>
