--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <style>
         body {
-            background-color: lightgray;
+            background-color: unset;
         }
 
         .header {
@@ -42,11 +43,10 @@
 
         .leftnav {
             overflow: hidden;
-            background-image: linear-gradient(to right, #333, rgba(255, 255, 255, 0.603));
             background-color: #333;
             font-size: 14pt;
             float: left;
-            width: 15%;
+            width: 10%;
         }
 
         .leftnav a {
@@ -67,7 +67,6 @@
 
         .topnav {
             overflow: hidden;
-            background-image: linear-gradient(to right, #333, rgba(255, 255, 255, 0.603));
             background-color: #333;
             font-size: 14pt;
             float: left;
@@ -91,7 +90,32 @@
 
         .dashboard {
             overflow: hidden;
-            width: 85%;
+            width: 90%;
+        }
+
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th,
+        td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        tbody>tr:nth-child(even) {
+            background-color: #f2f2f2 !important
+        }
+
+        tbody>tr:nth-child(odd) {
+            background-color: #fff !important
+        }
+
+        th {
+            background-color: #2f3439;
+            color: white;
         }
     </style>
 </head>
@@ -105,16 +129,19 @@
 
     <div class="leftnav">
         <div class="row">
-            <a href="index.html">ADP</a>
+            <a href="index.html">Human Resources</a>
         </div>
         <div class="row">
-            <a href="portofino_index.html">Pizzeria Portofino's</a>
+            <a href="portofino_index.html">Tovuti</a>
         </div>
         <div class="row">
-            <a href="city_winery_index.html">City Winery Chicago River Walk</a>
+            <a href="city_winery_index.html">Marketing</a>
         </div>
         <div class="row">
-            <a href="marina_index.html">Marina City</a>
+            <a href="marina_index.html">Verizon</a>
+        </div>
+        <div class="row">
+            <a href="marina_index.html">Dispatch</a>
         </div>
     </div>
 
@@ -130,6 +157,23 @@
         </div>
         <div class="row">
             <div id="enrollment"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <table id="summary-table" class="table table-striped table-inverse">
+                    <thead>
+                        <tr>
+                            <th>Year</th>
+                            <th>Type Of Enrollment Change</th>
+                            <th>Plan Type</th>
+                            <th>Plan Name</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
 
     </div>
