--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
         </div>
 
         <div class="row">
-            <div class="col-md-2">
-                <div class="well">
-                    <h5>Year</h5>
-                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
             <div class="panel panel-default">
                 <div class="panel-body">
                     Employee Benefit Enrollment
                 </div>
             </div>
             <div id="enrollment"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2">
+                <div class="well">
+                    <h5>Plan Names</h5>
+                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                </div>
+            </div>
         </div>
 
         <div class="row">
