--- a/index.html
+++ b/index.html
@@ -60,8 +60,24 @@
 
         <div class="row">
             <div class="col-md-2">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Coverages
+                    </div>
+                </div>
                 <div class="well">
-                    <h5>Plan Names</h5>
+                    <!-- <h5>Coverages</h5> -->
+                    <select id="selCoverage" onchange="optionChanged(this.value)"></select>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Eligibility Group
+                    </div>
+                </div>
+                <div class="well">
+                    <!-- <h5>Plan Names</h5> -->
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
             </div>
@@ -69,6 +85,11 @@
 
         <div class="row">
             <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Employee Benefit Enrollment
+                    </div>
+                </div>
                 <table id="summary-table" class="table table-striped table-inverse">
                     <thead>
                         <tr>
