Create total number chart for added and kept coverage

--- a/index.html
+++ b/index.html
@@ -50,27 +50,26 @@
         </div>
 
         <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    Employee Benefit Enrollment
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Employee Coverage Status
+                    </div>
                 </div>
+                <div id="keptCount"></div>
             </div>
-            <div id="enrollment"></div>
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Employee Benefit Enrollment
+                    </div>
+                </div>
+                <div id="enrollment"></div>
+            </div>
         </div>
 
         <div class="row">
-            <div class="col-md-2">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Coverages
-                    </div>
-                </div>
-                <div class="well">
-                    <!-- <h5>Coverages</h5> -->
-                    <select id="selCoverage" onchange="optionChanged(this.value)"></select>
-                </div>
-            </div>
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Eligibility Group
