Added report tabs to index html

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     <div class="dashboard">
         <div class="row">
             <div class="topnav">
-                <a href="index.html">ADP</a>
-                <a href="index.html">ADP</a>
-                <a href="index.html">ADP</a>
-                <a href="index.html">ADP</a>
-                <a href="index.html">ADP</a>
+                <a href="index.html">Hiring</a>
+                <a href="index.html">Benefits</a>
+                <a href="index.html">Credentials</a>
+                <a href="index.html">Discrepanies</a>
+                <a href="index.html">Annual Reviews</a>
+                <a href="index.html">30-90-180</a>
+                <a href="index.html">Annual Dash</a>
             </div>
         </div>
 
