Updated dash turnover rate chart

--- a/dash.html
+++ b/dash.html
@@ -58,7 +58,7 @@
                         Employee Coverage Status
                     </div>
                 </div>
-                <div id="keptCount"></div>
+                <div id="turnOver"></div>
             </div>
             <div class="col-md-8">
                 <div class="panel panel-default">
