renamed app js with enrollment js and created dash js

--- a/dash.html
+++ b/dash.html
@@ -55,18 +55,18 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        Employee Coverage Status
+                        Overall Turnover Rate
                     </div>
                 </div>
                 <div id="turnOver"></div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        Employee Benefit Enrollment
+                        Overall Retention Rate
                     </div>
                 </div>
-                <div id="enrollment"></div>
+                <div id="retention"></div>
             </div>
         </div>
 
@@ -112,7 +112,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="resources/js/app.js"></script>
+    <script src="resources/js/dash.js"></script>
 
 </body>
 
