Create yearly turnover chart

--- a/dash.html
+++ b/dash.html
@@ -52,13 +52,35 @@
         </div>
 
         <div class="row">
+            <div class="col-md-2">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Year Filter
+                    </div>
+                </div>
+                <div class="well">
+                    <!-- <h5>Plan Names</h5> -->
+                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Overall Turnover Rate
                     </div>
                 </div>
-                <div id="turnOver"></div>
+                <div id="turnover"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Yearly Turnover Rate
+                    </div>
+                </div>
+                <div id="yearlyTurnover"></div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
@@ -67,20 +89,6 @@
                     </div>
                 </div>
                 <div id="retention"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Eligibility Group
-                    </div>
-                </div>
-                <div class="well">
-                    <!-- <h5>Plan Names</h5> -->
-                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
-                </div>
             </div>
         </div>
 
