Create yearly retention rate chart

--- a/dash.html
+++ b/dash.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Overall Turnover Rate
@@ -74,7 +74,7 @@
                 </div>
                 <div id="turnover"></div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Yearly Turnover Rate
@@ -82,13 +82,21 @@
                 </div>
                 <div id="yearlyTurnover"></div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Overall Retention Rate
                     </div>
                 </div>
                 <div id="retention"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Yearly Retention Rate
+                    </div>
+                </div>
+                <div id="yearlyRetention"></div>
             </div>
         </div>
 
