Added Regions to Dropdown Menu

--- a/dash.html
+++ b/dash.html
@@ -129,10 +129,10 @@
                     <h2>Panel By Region</h2>
                     <select id="selregion" onchange="getData(this.value)">
                         <option value="Administration">Administration</option>
-                        <option value="Alicia's Region">Alicia's Region</option>
-                        <option value="Darryl's Region">Darryl's Region</option>
-                        <option value="Odom's Region">Odom's Region</option>
-                        <option value="Steve's Region">Steve's Region</option>
+                        <option value="Alicia\'s Region">Alicia's Region</option>
+                        <option value="Darryl\'s Region">Darryl's Region</option>
+                        <option value="Odom\'s Region">Odom's Region</option>
+                        <option value="Steve\'s Region">Steve's Region</option>
                     </select>
                 </div>
                 <div id="pie"></div>
