Create pie chart for termination reason

--- a/dash.html
+++ b/dash.html
@@ -129,13 +129,20 @@
                     <h2>Panel By Region</h2>
                     <select id="selregion" onchange="getData(this.value)">
                         <option value="Administration">Administration</option>
-                        <option value="Alicia\'s Region">Alicia's Region</option>
-                        <option value="Darryl\'s Region">Darryl's Region</option>
-                        <option value="Odom\'s Region">Odom's Region</option>
-                        <option value="Steve\'s Region">Steve's Region</option>
+                        <option value="Alicia">Alicia's Region</option>
+                        <option value="Darryl">Darryl's Region</option>
+                        <option value="Odom">Odom's Region</option>
+                        <option value="Steve">Steve's Region</option>
                     </select>
                 </div>
-                <div id="pie"></div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="pie"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="pieTerm"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
