--- a/30_90_180.html
+++ b/30_90_180.html
@@ -52,34 +52,96 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        Employee Coverage Status
-                    </div>
-                </div>
-                <div id="keptCount"></div>
-            </div>
-            <div class="col-md-8">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Employee Benefit Enrollment
-                    </div>
-                </div>
-                <div id="enrollment"></div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Eligibility Group
+                        Year
                     </div>
                 </div>
                 <div class="well">
                     <!-- <h5>Plan Names</h5> -->
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Hire Reason
+                    </div>
+                </div>
+                <div class="well">
+                    <!-- <h5>Plan Names</h5> -->
+                    <select id="hireDataset" onchange="optionChanged(this.value)"></select>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Overall Turnover Rate
+                    </div>
+                </div>
+                <div id="turnover"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Yearly Turnover Rate
+                    </div>
+                </div>
+                <div id="yearlyTurnover"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Overall Retention Rate
+                    </div>
+                </div>
+                <div id="retention"></div>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Yearly Retention Rate
+                    </div>
+                </div>
+                <div id="yearlyRetention"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Overall Turnover Rate
+                    </div>
+                </div>
+                <div id="retentionRate"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="well">
+                    <h2>Panel By Region</h2>
+                    <select id="selregion" onchange="getData(this.value)">
+                        <option value="Administration">Administration</option>
+                        <option value="Alicia">Alicia's Region</option>
+                        <option value="Darryl">Darryl's Region</option>
+                        <option value="Odom">Odom's Region</option>
+                        <option value="Steve">Steve's Region</option>
+                    </select>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="pie"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="pieTerm"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,7 +174,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="resources/js/enrollment.js"></script>
+    <script src="resources/js/30_90_180.js"></script>
 
 </body>
 
