Create 30-90-180 comparsion bar chart

--- a/30_90_180.html
+++ b/30_90_180.html
@@ -63,53 +63,6 @@
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
             </div>
-
-            <div class="col-md-2">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Hire Reason
-                    </div>
-                </div>
-                <div class="well">
-                    <!-- <h5>Plan Names</h5> -->
-                    <select id="hireDataset" onchange="optionChanged(this.value)"></select>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Overall Turnover Rate
-                    </div>
-                </div>
-                <div id="turnover"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Yearly Turnover Rate
-                    </div>
-                </div>
-                <div id="yearlyTurnover"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Overall Retention Rate
-                    </div>
-                </div>
-                <div id="retention"></div>
-            </div>
-            <div class="col-md-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        Yearly Retention Rate
-                    </div>
-                </div>
-                <div id="yearlyRetention"></div>
-            </div>
         </div>
 
         <div class="row">
@@ -119,7 +72,7 @@
                         Overall Turnover Rate
                     </div>
                 </div>
-                <div id="retentionRate"></div>
+                <div id="30-90-180"></div>
             </div>
         </div>
 
