Created Total 30-90-180 Day New Hire Review pie chart

--- a/30_90_180.html
+++ b/30_90_180.html
@@ -66,7 +66,15 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        Total 30-90-180 Day Hew Hire Review
+                    </div>
+                </div>
+                <div id="pie"></div>
+            </div>
+            <div class="col-md-8">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         Overall Turnover Rate
