--- a/30_90_180.html
+++ b/30_90_180.html
@@ -69,7 +69,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        Total 30-90-180 Day Hew Hire Review
+                        Total 30-90-180 Day New Hire Review
                     </div>
                 </div>
                 <div id="pie"></div>
@@ -111,16 +111,14 @@
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        Employee Benefit Enrollment
+                        Add Title Here
                     </div>
                 </div>
                 <table id="summary-table" class="table table-striped table-inverse">
                     <thead>
                         <tr>
-                            <th>Year</th>
-                            <th>Type Of Enrollment Change</th>
-                            <th>Plan Type</th>
-                            <th>Plan Name</th>
+                            <th>Name</th>
+                            <th>Name</th>
                             <th>Name</th>
                         </tr>
                     </thead>
